<resources>
    <string name="app_name">Blood Donation</string>
    <string name="action_settings">About</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="guest">Guest</string>
    <string name="blood_group">Blood Group</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="au">Add/Update</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="logout">Log out</string>
    <string name="rno">Roll No</string>
    <string name="dept">Dept</string>
    <string name="name">Name</string>
    <string name="title_activity_delete">delete</string>
    <string name="pno">Phone Number</string>
    <string name="Year">Year</string>
    <string name="update">Update</string>
</resources>
